修正 GitHub Actions 工作流中的构建和发布步骤，将上传和下载的构件名称从 `dist-${{ matrix.os }}` 更新为 `dist-${{ matrix.runs-on }}`。

--- a/.github/workflows/python-package.yaml
+++ b/.github/workflows/python-package.yaml
@@ -33,7 +33,7 @@ jobs:
     - name: Upload build artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: dist-${{ matrix.os }}
+        name: dist-${{ matrix.runs-on }}
         path: dist/
 
   publish:
@@ -44,7 +44,7 @@ jobs:
     - name: Download build artifacts
       uses: actions/download-artifact@v4
       with:
-        name: dist-${{ matrix.os }}
+        name: dist-${{ matrix.runs-on }}
         path: dist/
     - name: Publish to PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
