--- a/.github/workflows/python-package.yaml
+++ b/.github/workflows/python-package.yaml
@@ -9,10 +9,7 @@ on:
 
 jobs:
   build:
-    strategy:
-      matrix:
-        os: [macos-13, macos-14]
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
@@ -33,21 +30,18 @@ jobs:
     - name: Upload build artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: dist-${{ matrix.os }}
+        name: dist
         path: dist/
 
   publish:
     needs: build
-    strategy:
-      matrix:
-        os: [macos-13, macos-14]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
     - name: Download build artifacts
       uses: actions/download-artifact@v4
       with:
-        name: dist-${{ matrix.os }}
+        name: dist
         path: dist/
     - name: Publish to PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
