--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "macos-clipboard-mcp"
-version = "1.0.1"
-description = "Add your description here"
+version = "1.0.2"
+description = "A simple utility that provides model context protocol (MCP) tools for interacting with the macOS clipboard."
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
